{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Camera",
            "id": "422fd339-cc63-4ead-93f8-a50ce84132d5",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "2c8b3401-9f3d-4eb9-8d52-ce80e1219e27",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "rotate",
                    "type": "Value",
                    "id": "8c205747-8590-47e4-9afe-3d2987e4110a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "focusOnPlayer",
                    "type": "Button",
                    "id": "ef7766f7-31f4-41ea-91ad-031f31004ce3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "9c29d775-185b-4d63-a0b4-945ce2a2f8b5",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "19c2c9fa-0afb-42d0-beae-97595f7e5282",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ff923488-f834-4e78-869f-9ba7909cd98a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "280263dd-7a80-42b5-af95-7b554facab12",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2d3f4575-111d-4a64-9fe6-304e43573151",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "QE",
                    "id": "c05e16ba-f29b-452b-bcc4-7069fd45bef8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "620d989e-2a79-4362-9bf2-e465dbaa7b45",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "53bfc0b5-1782-4634-8cd5-9d5cb9d52853",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a7a3da9e-2492-416e-b1be-eabc00d065d3",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "focusOnPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "2a3c47e8-1b60-4b25-822f-225b0ab83739",
            "actions": [
                {
                    "name": "LeftMouseClick",
                    "type": "Button",
                    "id": "9706a153-e612-47e9-adb7-4f6c0184c31b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "397693c9-bcbf-4e61-a444-f5699a64f2c5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMouseClick",
                    "type": "Button",
                    "id": "b1b10e4e-f02a-4d90-97ce-aaad5a868172",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aac90c36-4aa3-40a6-b757-b421567b9cdd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "996f3f7e-fd07-4306-87ba-92a853b796e2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e25cc8b-bb05-40c7-9616-8a59504e0879",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}